# mcp-wrapper

./: .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml
src/mcp_wrapper/: __init__.py  __main__.py  config.py  http_client.py  main.py  openapi.py  server.py  tools.py
tests/: __init__.py  test_config.py  test_http_client.py  test_integration.py  test_main.py  test_openapi.py  test_server.py  test_tools.py
